styles.css
@font-face {
  font-family: roboto;
  src: url(./fonts/Roboto/Roboto-Light.ttf);
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  min-height: 100vh;
  font-family: "roboto", sans-serif;
}

.container,
.main-section,
.player-info-block,
.gameboard {
  display: grid;
}

.player-info-block,
.popup-message,
h1,
#footer > p {
  text-align: center;
}

.container {
  grid-template-rows: 1fr 50px;
  background-color: darkolivegreen;
  height: 100vh;
}

.main-section {
  grid-template-rows: 70px 50px 70px 1fr;
  place-items: center;
  position: relative;
}

/* 1. Title section */
h1 {
  font-size: 3rem;
  font-weight: bold;
  font-style: italic;
  color: white;
}

/* 2. Buttons to control the flow of the game */
.game-control-block {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 30px;
}

.game-control-block > button {
  height: 40px;
  width: 180px;
  font-size: 1.5rem;
  border: none;
  background-color: palevioletred;
  border-radius: 10px;
}

.game-control-block > button:hover {
  cursor: pointer;
  color: white;
  text-decoration: underline;
}

/* 3. Section with the player names and their scores */
.player-info-block {
  grid-template-columns: 170px 50px 20px 50px 170px;
  grid-template-rows: 50px;

  font-size: 2rem;
  font-weight: bold;
}

.player-info-block .score {
  align-self: center;
  color: white;
}

.player-info-block > span[contenteditable="true"] {
  overflow: hidden;
  background-color: white;
  padding: 5px;
}

.player-info-block > span[contenteditable="true"]:hover {
  cursor: pointer;
}

.player-info-block > span[contenteditable="true"]:focus {
  outline: none;
  font-style: italic;
  border: palevioletred 3px solid;
}

/* 4. Gameboard where all action takes place */
.gameboard {
  grid-template-columns: repeat(3, 90px);
  grid-template-rows: repeat(3, 90px);
  gap: 10px;

  width: 310px;
  height: 310px;
  border: 10px solid grey;
  background-color: goldenrod;
}

.gameboard > .cell {
  width: 90px;
  height: 90px;
  background-color: skyblue;
}

.cell {
  display: flex;
  align-items: center;
  justify-content: center;

  font-size: 3rem;
  font-weight: bold;
  border: none;
}

.cell:hover {
  cursor: pointer;
  background-color: rgb(92, 132, 148);
}

/* 5. Hidden popup block to congratulate a winner */
.congratulate-block {
  display: none;

  position: absolute;
  top: 250px;
  height: 200px;
  width: 400px;
  padding: 30px 50px;
  border-radius: 20px;
  background-color: palevioletred;
}

.popup-message {
  font-size: 2rem;
  font-weight: bold;
  font-style: italic;
}

.close-popup {
  position: absolute;
  bottom: 20px;
  right: 20px;

  background-color: green;
  border-radius: 10px;
  border: none;
  padding: 5px 10px;
  font-size: 1.1rem;
  z-index: 3;
}

.close-popup:hover {
  color: white;
  cursor: pointer;
}

/* 6. Footer of the page */
#footer {
  background-color: black;
}

#footer a {
  color: white;
  text-decoration: none;
}

#footer a:hover {
  text-decoration: underline;
  color: red;
}

#footer > p {
  padding: 15px;
}

/* 7. Responsiveness on the smaller screens */
@media (max-width: 768px) {
  h1 {
    margin-top: 20px;
  }

  .container {
    height: auto;
  }

  .main-section {
    display: flex;
    flex-direction: column;
    gap: 30px;
    margin-bottom: 30px;
  }

  .game-control-block {
    flex-direction: column;
    gap: 15px;
  }

  .player-info-block {
    grid-template-columns: 75px 100px 75px;
    grid-template-rows: 50px 70px 50px;
    margin: auto;
  }

  .player-one-name {
    grid-column: 1/4;
    grid-row: 1/2;
  }

  .player-two-name {
    grid-column: 1/4;
    grid-row: 3/4;
  }

  .score {
    grid-column: 2/3;
  }

  .player-one-score {
    grid-column: 1/2;
    grid-row: 2/3;
  }

  .player-two-score {
    grid-column: 3/4;
    grid-row: 2/3;
  }
}

